[package]
name = "pie"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
fake = { version = "2.9.2", features = ["uuid"] }
tower = "0.4.13"
