[package]
name = "pie"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
fake = { version = "2.9.2", features = ["uuid"] }
rstest = "0.21.0"
tower = "0.4.13"
uuid = { version = "1.8.0", features = ["v4"] }
